fix z-index problem

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,9 +78,11 @@ body {
 	white-space: nowrap;
   font-size: 2em;
   text-shadow: 0px 0px 10px #888;
+  z-index: 5;
 }
 
 #doc {
+  position: relative;
   z-index: 10;
   display: none;
 }
